syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.aungmyohtwe.note.proto.model";

package com.aungmyohtwe.note.proto;

message Note{
    string id = 1;
    string title = 2;
    string message = 3;
    string createdDate = 4;
}

message ParamId{
    string id = 1;
}

message Response{
    string status = 1;
    string description = 2;
    string code = 3;
}

message ResponseList{
    repeated Note notes = 1;
}

service NoteService{
    rpc createNote(Note) returns (Response){

    }
     rpc deleteNote(ParamId) returns (Response){

    }
     rpc searchNotes(ParamId) returns (ResponseList){

    }

}